<resources>
    <string name="app_name">EventPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_image_sample">Service Image</string>
    <string name="service_name_sample">Service Name</string>
    <string name="service_description_sample">Service description&#8230;</string>
    <string name="category_card_name">Name</string>
    <string name="category_card_description">Description&#8230;</string>
    <string name="confirm">Confirm</string>
    <string name="title_create_category">Create category</string>
    <string name="title_update_category">Update category</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="hint_category_name">Awesome name</string>
    <string name="hint_category_description">Description&#8230;</string>
    <string name="new_category">Add Category</string>
    <string name="chat_with_provider">Chat With Provider</string>
    <string name="purchase">Purchase</string>
    <string name="reserve">Reserve</string>
    <string name="search_hint">Enter Search Credentials</string>

    <string-array name="privacy_types">
        <item>OPEN</item>
        <item>CLOSED</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="select_category">Select Category</string>
    <string name="min_price_hint">Minimum Price</string>
    <string name="max_price_hint">Maximum Price</string>
    <string name="provider_solutions">My Solutions</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="create_service">Create a Service</string>
    <string name="update_service">Update Service</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="new_category_option">New Category</string>
    <string name="applicable_event_types">Applicable Event Types</string>
    <string name="select_event_types">Select event types</string>
    <string name="select">Select</string>
    <string name="fixed_duration">Fixed Duration</string>
    <string name="duration_range">Duration Range</string>
    <string name="duration">Duration</string>
    <string name="min_duration">Min Duration</string>
    <string name="max_duration">Max Duration</string>
    <string name="minutes">minutes</string>
    <string name="min">min</string>
    <string name="reservation_period">Reservation Period</string>
    <string name="cancellation_period">Cancellation Period</string>
    <string name="days">days</string>
    <string name="auto_accept_reservations">Automatically accept reservations</string>
    <string name="percent">%</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="created_service_message">Successfully created a service</string>
    <string name="add_service">New Service</string>
    <string name="add_product">New Product</string>
    <string name="event_image">Event image</string>
    <string name="toggle_favorite">Toggle favorite</string>
    <string name="chat_with_organizer">Chat with event organizer</string>


    <string name="create_product">Create a Product</string>
    <string name="discount_percent">Discount (%)</string>
    <string name="visible">Visible</string>
    <string name="available">Available</string>
    <string name="status">Status</string>
    <string name="choose_category">Choose Category</string>
    <string name="propose_new_category">Propose New Category</string>
    <string name="new_category_name">New Category Name</string>
    <string name="new_category_description">New Category Description</string>
    <string name="event_types">Event Types</string>

</resources>