<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".ui.fragment.solutions.SolutionFiltersDialogFragment">

    <ScrollView
        android:id="@+id/scroll_view_filters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Category spinner -->
            <Spinner
                android:id="@+id/select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@drawable/edittext_background"
                android:prompt="@string/select_category" />

            <!-- Min Price -->
            <EditText
                android:id="@+id/input_min_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:hint="@string/min_price_hint"
                android:inputType="numberDecimal"
                android:layout_marginTop="12dp" />

            <!-- Max Price -->
            <EditText
                android:id="@+id/input_max_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:hint="@string/max_price_hint"
                android:inputType="numberDecimal"
                android:layout_marginTop="12dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FFF"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:fontFamily="@font/petrona"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/btn_rounded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_apply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/apply"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:fontFamily="@font/petrona"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/btn_rounded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
