<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="ui.fragment.category.NewCategoryFragment">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <!-- Title -->
        <TextView
            android:id="@+id/tw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/project_brown"
            android:text="@string/title_create_category"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
        />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_background"
            android:padding="20dp">

            <!-- Name input -->
            <EditText
                android:id="@+id/et_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="12dp"
                android:autofillHints=""

                android:background="@drawable/border"
                android:hint="@string/hint_category_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/project_brown"
                android:textColorHint="@color/project_brown" />

            <!-- Description input -->
            <EditText
                android:id="@+id/et_category_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="20dp"
                android:autofillHints=""

                android:background="@drawable/border"
                android:hint="@string/hint_category_description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/project_brown"
                android:textColorHint="@color/project_brown" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/confirm"
                android:backgroundTint="@color/project_brown"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
            />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
